# docmesh-py-core

./: .env.example  .gitignore  AGENTS.md  PRD.md  README.md  pyproject.toml  sample.py  sss.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.db.yml  docker-compose.keycloak.yml  docker-compose.langfuse.yml  docker-compose.milvus.yml  docker-compose.mq.yml  docker-compose.yml
.github/workflows/: python-publish.yml
.wiki/: SCHEMA.md  index.md  log.md
.wiki/concepts/: docmesh-sdk-overview.md  health-check-pattern.md  keycloak-auth-flow.md  keycloak-provisioning.md  observability-utilities.md  pagination-and-retry.md  sensitive-value-masking.md  serialization-and-snapshots.md  service-factory-registry.md  settings-system.md  test-strategy.md
.wiki/entities/: keycloak.md  langfuse.md  milvus.md  minio.md  nats.md  ollama.md  postgres.md  sqlite.md
.wiki/queries/: future-development-roadmap.md  sqlite-adoption-plan.md
.wiki/raw/articles/: prd.md
.wiki/raw/project-docs/: api.md  sdk.md
docmesh_py_core/: __init__.py  config.py  factories.py  function_logging.py  health.py  keycloak.py  observability.py  pagination.py  retry.py  security.py  serialization.py  snapshot.py
docs/: api.md  config.md  examples.md  prd.md  sdk.md  srs.md  test.md
test_docmesh_py_core/: conftest.py  test_config.py  test_env_example.py  test_factories.py  test_function_logging.py  test_health.py  test_integration_services.py  test_keycloak.py  test_keycloak_provisioning.py  test_observability.py  test_project_contract.py  test_security.py  test_utilities.py
